# LeGloVe

./: .pre-commit-config.yaml  README.md  cleanup.py  example.py  juris_abbrevs.txt  pyproject.toml  readme.md  regexes.py  requirements.txt  train.py
.github/workflows/: ci.yml
leglove/: cleanup.py  example.py  regexes.py  train.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_example.py  test_regexes.py  test_train.py
